# Shader3000

./: .gitignore  Cargo.toml  Makefile.toml  README.md  bibliografia.bib  dist.sh
.cargo/: config
compiler/: Cargo.toml
doc/: Diagramas.drawio  atributos.md  bibliografia.bib  bitChavarria.md  bitGonzales.md  bitMorales.md  bitSoto.md  gramatica.BNF  investigacion.bib  investigacion.md
editor/: Cargo.toml
editor/examples/: Highlight_test.led  diagonals.led  error_test.led  final_tests.led  hour_glass.led  one_by_one.led  operations.led  procedure_test.led  semantic_errors.led  sign.led  stick_man.led  test1.led
editor/resources/: led.lang  style.css
editor/resources/themes/: Lechuza.xml  Mapache.xml  Salamandra.xml  Vulpeja.xml  classic.xml
editor/src/: #IDE.glade#  IDE.glade  IDE.glade~  main.rs
editor/src/resources/: IDE.glade  IDE.glade~  cobalt.xml  led.lang  style.css
examples/: frontend.rs  lex_parse.rs
runtime/: Cargo.toml  build.rs
runtime/examples/: esp8266.rs  esp8266.s  x86_64.rs  x86_64.s
runtime/src/: builtin.rs  chrono.rs  entry.rs  esp8266.rs  hosted.rs  lib.rs  matrix.rs
runtime/src/esp8266/: mod.rs
runtime/src/esp8266/atomic/: generate_atomic_shim.py  mod.rs
runtime/src/esp8266/hacks/: README.md
src/: error.rs  ir.rs  lex.rs  lib.rs  link.rs  macros.rs  main.rs  parse.rs  semantic.rs  source.rs
src/arch/: mod.rs  x86_64.rs  xtensa.rs
src/codegen/: mod.rs  regs.rs  x86_64.rs  xtensa.rs
