cargo-features = ["named-profiles"]

[workspace]
members = [".", "runtime", "editor"]
default-members = [".", "runtime", "editor"]

[package]
name = "compiler"
version = "1.0.0"
edition = "2018"
license-file = "LICENSE"
authors = ["Alejandro Soto <alejandro@34project.org>",
           "Natalia GB <natigonzalezbermudez@gmail.com>",
           "josfemova <josfemova@gmail.com>",
           "Jose Alejandro Chavarria <joalchama@gmail.com>"]

[profile.release-embedded]
inherits = "release"
panic = "abort"
opt-level = "z"
codegen-units = 1

[dependencies]
anyhow = "1.0.40"
bitflags = "1.2.1"
clap = "^3.0.0-beta.2"
thiserror = "1.0.23"
unicase = "2.6.0"
