[package]
name = "editor"
version = "0.1.0"
edition = "2018"
authors = ["Alejandro Soto <alejandro@34project.org>",
           "Natalia GB <natigonzalezbermudez@gmail.com>",
           "josfemova <josfemova@gmail.com>",
           "Jose Alejandro Chavarria <joalchama@gmail.com>"]

[dependencies]
gtk = "0.9.2"
sourceview = "0.9.0"
