[package]
name = "runtime"
version = "0.1.0"
edition = "2018"
autobins = false
authors = ["Alejandro Soto <alejandro@34project.org>",
           "Natalia GB <natigonzalezbermudez@gmail.com>",
           "josfemova <josfemova@gmail.com>",
           "Jose Alejandro Chavarria <joalchama@gmail.com>"]

[lib]
crate-type = ["staticlib", "rlib"]

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp8266-hal = {git = "https://github.com/esp-rs/esp8266-hal", features = ["all_in_ram"]}
nb = "1.0.0"
xtensa-lx-rt = { version = "0.5.0", features = ["lx106"] }
xtensa-lx = "0.3.0"

[build-dependencies]
cc = "1.0.67"
nix = "0.20.0"
