[package]
name = "runtime"
version = "0.1.0"
edition = "2018"
autobins = false
authors = ["Alejandro Soto <alejandro@34project.org>",
           "Natalia GB <natigonzalezbermudez@gmail.com>",
           "josfemova <josfemova@gmail.com>",
           "Jose Alejandro Chavarria <joalchama@gmail.com>"]

[lib]
crate-type = ["staticlib", "rlib"]

[target.'cfg(target_family = "unix")'.dependencies]
ansi-escapes = "0.1.0"
lazy_static = "1.4.0"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp8266-hal = { git = "https://github.com/itcr3442/esp8266-hal", rev= "b62ee92d17490722ba7047c813793a8f761c6188" }
nb = "1.0.0"
xtensa-lx-rt = { version = "0.5.0", features = ["lx106"] }
xtensa-lx = { version = "0.3.0", features = ["lx106"] }
buddy_system_allocator = "0.8.0"
micromath = "2.0.0"

[build-dependencies]
cc = "1.0.67"
nix = "0.20.0"

[dependencies]
paste = "1.0.5"
